Bug 114956 - Calc - comment field does not increase dynamically during input
Summary: Calc - comment field does not increase dynamically during input
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.4 target:7.1.0
Keywords: bibisected, bisected, regression
: 116778 117778 120391 131325 145316 (view as bug list)
Depends on:
Blocks: Calc-Comments
  Show dependency treegraph
 
Reported: 2018-01-10 20:14 UTC by karsten.henning
Modified: 2021-10-27 13:10 UTC (History)
14 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot comment-field in Calc (4.08 KB, image/png)
2018-01-10 20:18 UTC, karsten.henning
Details

Note You need to log in before you can comment on or make changes to this bug.
Description karsten.henning 2018-01-10 20:14:11 UTC
Description:
The background of the comment field does not increase dynamically during input.
Calc LibreOffice

Steps to Reproduce:
1.Start Calc
2.Insert a comment
3.Write some words to generate several LF/CR

Actual Results:  
The Background does not increase dynamically during input

Expected Results:
The Background increases dynamically during input


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.0.0.1
Build-ID: d2bec56d7865f05a1003dc88449f2b0fdd85309a
CPU-Threads: 4; BS: Linux 4.4; UI-Render: Standard; VCL: kde4; 
Gebietsschema: de-DE (de_DE.UTF-8); Calc: group


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:57.0) Gecko/20100101 Firefox/57.0
Comment 1 karsten.henning 2018-01-10 20:18:32 UTC
Created attachment 139032 [details]
Screenshot comment-field in Calc
Comment 2 Jacques Guilleron 2018-01-11 08:23:51 UTC
Hi karsten,

I reproduce with :
LO  6.0.0.0.alpha0+ Build ID: 02c53f744ed23e2149fc7c83d67cb7d8aa5eb0ed
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-08-24_05:48:55
Locale: fr-FR (fr_FR); Calc: CL
and upper versions
but not with :
LO 6.0.0.0.alpha0+ Build ID: 88179e3de8865ea07d5017ca0723afd10ad44ba7
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-08-06_23:49:25
Locale: en-US (fr_FR); Calc: group
Thank you to have reported it.
Comment 3 raal 2018-01-12 10:21:58 UTC
This seems to have begun at the below commit.
Adding Cc: to Armin Le Grand; Could you possibly take a look at this one? Thanks
 963f322830fead6b4e00c1afac0d4ef2a0e027e4 is the first bad commit
commit 963f322830fead6b4e00c1afac0d4ef2a0e027e4
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Aug 10 09:28:16 2017 -0700

    source f06b48a5dddab20fd1bbf9b5f3e8543593f5e590
author	Armin Le Grand <Armin.Le.Grand@cib.de>	2017-08-04 18:56:43 +0200
committer	Armin Le Grand <Armin.Le.Grand@cib.de>	2017-08-10 15:17:58 +0200
commit f06b48a5dddab20fd1bbf9b5f3e8543593f5e590 (patch)
tree ce3bb9e57cdb21a8414a49bf919b1c442d2687ea
parent 2ae717f2d722d78b29b51dc40194b64ab3bb5bc8 (diff)
editviewoverlay: Allow EditView to run in Overlay
Comment 4 Telesto 2018-04-03 18:35:35 UTC
*** Bug 116778 has been marked as a duplicate of this bug. ***
Comment 5 Frederic Parrenin 2018-05-24 09:40:43 UTC
I can confirm this problem in 6.0.2.
Comment 6 Xisco Faulí 2018-06-05 09:09:57 UTC
*** Bug 117778 has been marked as a duplicate of this bug. ***
Comment 7 Armin Le Grand (collabora) 2018-06-06 15:06:10 UTC
I do not see a difference to lo-6-0.
When typing and getting to the lower end so that scroll is needed, in the refreshed areas the comment-containing SdrObject gets visible. On repaint (CTRL+SHIFT+R) the whole comment-containing SdrObject gets visible. This can be explained by the change: It makes the TextEdit be on the overlay so that the EditView-content does not need to be painted.
Same happens in Draw (including repaint - when you add a TextFrame. To make visible, add a fill and line to it.
tdf#94223 may be duplicate to this, too.
tdf#115438 may be duplicate to this, too.
It's all about missing repaints/refreshes of self-expanding objects the text is contained in.
Comment 8 Xisco Faulí 2018-06-06 15:21:14 UTC
(In reply to Armin Le Grand (CIB) from comment #7)
> I do not see a difference to lo-6-0.

Hi Armin,
Against which commit in lo-6-0 are you checking this? Be aware the commit mentioned in comment 3 was submitted on Aug 10 09:28:16 2017, which means, 6.0 alpha0+
Comment 9 Armin Le Grand (collabora) 2018-06-13 08:27:01 UTC
@Xisco with libreoffice-6-0 I check against the branch with the same name that I update locally here periodically from time to time, not a special release version. HTH!
Comment 10 Xisco Faulí 2018-10-15 13:30:08 UTC
*** Bug 120391 has been marked as a duplicate of this bug. ***
Comment 11 Xisco Faulí 2018-11-28 10:57:54 UTC
*** Bug 121750 has been marked as a duplicate of this bug. ***
Comment 12 Thomas Lendo 2019-09-04 05:33:04 UTC
Nothing changed in Version: 6.4.0.0.alpha0+ (x64)
Build-ID: 41cd3e8e817c8c33a13608e62eeb06ce2c6977e4
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-09-01_22:04:10
Comment 13 Timur 2020-03-13 14:27:27 UTC
*** Bug 131325 has been marked as a duplicate of this bug. ***
Comment 14 Timur 2020-03-13 14:29:26 UTC
Better seen in https://bugs.documentfoundation.org/attachment.cgi?id=158667.
I set Minor because box resizes on the next show up.
IMO this is High just because of existing and prospective duplicates.
Comment 15 Xisco Faulí 2020-11-18 12:04:07 UTC
Hi Caolán,
it seems like a UI problem, I thought you might be interested in this issue
Comment 16 Caolán McNamara 2020-11-18 16:59:18 UTC
I see that the bSuppressChangeWhenEditOnOverlay part of https://cgit.freedesktop.org/libreoffice/core/commit/?id=f06b48a5dddab20fd1bbf9b5f3e8543593f5e590 seems to be that causes this
Comment 17 Caolán McNamara 2020-11-18 17:11:43 UTC
I'll add a workaround to get the calc comment case working
Comment 18 Commit Notification 2020-11-19 01:18:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/0d36233d4555b5f160a407328661825eb9305c98

Resolves: tdf#114956 skip broadcast optimization for ScPostIts

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2020-11-19 08:51:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2f7b5634487ac3d27777ab12a57089e71ea5216d

Resolves: tdf#114956 skip broadcast optimization for ScPostIts

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Xisco Faulí 2020-11-19 09:53:35 UTC
Verified in

Version: 7.1.0.0.alpha1+
Build ID: 2f7b5634487ac3d27777ab12a57089e71ea5216d
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 21 Timur 2021-10-27 13:10:35 UTC
*** Bug 145316 has been marked as a duplicate of this bug. ***