Resolves: tdf#114956 skip broadcast optimization for ScPostIts

so we can resize the ScPostIt as was the case before

commit f06b48a5dddab20fd1bbf9b5f3e8543593f5e590
Date:   Fri Aug 4 18:56:43 2017 +0200

    editviewoverlay: Allow EditView to run in Overlay

Change-Id: Idd92716a9b38058f6f275769d4f2523eddac500c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/106005
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>