sc/source/core/data/postit.cxx
@@ -382,6 +382,9 @@ void ScCaptionCreator::CreateCaption( bool bShown, bool bTailFront )
             *mrDoc.GetDrawLayer(), // TTTT should ret a ref?
             aTextRect,
             aTailPos));
+    // tdf#114956 a way to recognize that this SdrCaption is for a ScPostit in
+    // SdrTextObj::AdjustTextFrameWidthAndHeight
+    mxCaption->SetName("ScPostIt");
     // basic caption settings
     ScCaptionUtil::SetBasicCaptionSettings( *mxCaption, bShown );
 }
